# plotbook

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: build.yml
installer/: windows.nsi
resources/: palettes.json
src/plotbook/: __init__.py  __main__.py  app.py
src/plotbook/io/: clipboard.py  csv_import.py  file_format.py
src/plotbook/models/: datatable.py  enums.py  graph_spec.py  palette.py  project.py  style.py  style_preset.py  table_formats.py
src/plotbook/rendering/: engine.py  error_bars.py  export.py  formatters.py  series_renderers.py
src/plotbook/stats/: descriptive.py
src/plotbook/ui/: format_panel.py  graph_canvas.py  graph_type_dialog.py  main_window.py  navigator.py  new_sheet_dialog.py  spreadsheet.py  symbol_picker.py
src/plotbook/ui/format_pages/: annotations_page.py  axis_page.py  errorbars_page.py  legend_page.py  reflines_page.py  series_page.py  title_page.py  trendline_page.py
src/plotbook/viewmodels/: graph_viewmodel.py  table_model.py
