[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "plotbook"
version = "0.1.0"
description = "Publication-quality graph editor for scientists"
requires-python = ">=3.10"
dependencies = [
    "PyQt6>=6.5",
    "matplotlib>=3.7",
    "numpy>=1.24",
]

[project.optional-dependencies]
stats = ["scipy>=1.10"]
dev = ["pytest>=7.0"]

[project.scripts]
plotbook = "plotbook.app:main"

[tool.setuptools.packages.find]
where = ["src"]
